--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <!--
     Farvekoder til SENS-appen, defineret af SENS.
     -->
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#2A2A2A</color>
     <color name="colorRed">#E82020</color>
-    <color name="colorBackground">#F1F0F0</color>
+    <color name="colorBackground">#F2F2F2</color>
     <color name="colorGray">#A6B9C5</color>
     <color name="colorBlue">#1A91DC</color>
     <color name="colorDarkBlue">#0B659D</color>
