Tilføj sens billede som virker. Opdateringer på login.xml

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login_frag">
+    tools:context=".Login_frag"
+    android:background="@color/colorBackground">
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/sensmotionwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +26,13 @@
         android:id="@+id/brugernavn"
         style="@android:style/Widget.Material.Light.AutoCompleteTextView"
         android:layout_width="300dp"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/edittext_custom"
         android:hint="Brugernavn"
+        android:paddingLeft="15dp"
         android:radius="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +41,14 @@
     <EditText
         android:id="@+id/kodeord"
         android:layout_width="300dp"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
+        android:background="@drawable/edittext_custom"
         android:hint="Kodeord"
         android:inputType="textPassword"
+        android:paddingLeft="15dp"
         android:selectAllOnFocus="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -55,24 +59,26 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="28dp"
-        android:checked="true"
-        android:text="CheckBox"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:checked="false"
+        android:text="Forbliv logget ind"
+        android:textColor="@color/colorGray"
+        android:textStyle="italic|bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kodeord" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/logIndKnap"
         android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/login_knap"
         android:text="Log ind"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
