--- a/app/src/main/res/drawable/opret_patient_knap.xml
+++ b/app/src/main/res/drawable/opret_patient_knap.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="100dp"
-        />
-    <solid
-        android:color="@color/colorRed"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="300dp"
-        android:height="44dp"
-        />
-    <stroke
-        android:width="1dp"
-        android:color="#000000"
-        />
-</shape>
+
+<selector>
+    <item>
+
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+            <corners
+                android:radius="15dp"
+                />
+            <solid
+                android:color="@color/colorRed"
+                />
+            <stroke
+                android:width="2dp"
+                android:color="@color/colorBlack"
+                />
+        </shape>
+
+    </item>
+</selector>
