--- a/app/src/main/res/layout/fragment_instillinger.xml
+++ b/app/src/main/res/layout/fragment_instillinger.xml
@@ -12,7 +12,7 @@
         android:id="@+id/Titel"
         android:layout_width="394dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="18dp"
         android:background="@color/colorRed"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
@@ -21,127 +21,174 @@
         android:text="Fornavn Efternavn"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/Indstillinger"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
+
     <TextView
         android:id="@+id/Indstillinger"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="9dp"
         android:text="Din profil"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Info1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Titel" />
 
     <Button
         android:id="@+id/logud"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/logud_knap"
         android:text="Log ud"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="503dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Lydswitch" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="342dp"
-        android:layout_height="2dp"
+        android:layout_width="0dp"
+        android:layout_height="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorBlack"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Info3" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="213dp"
-        android:layout_height="38dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="28dp"
         android:text="Notifikationer"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="304dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Pop_switch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <TextView
         android:id="@+id/Pop-up"
-        android:layout_width="348dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="58dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
         android:text="  Pop-up Notifikationer"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="362dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/Lydeffekter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/Info1"
-        android:layout_width="348dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Info2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Indstillinger" />
 
     <TextView
         android:id="@+id/Info2"
-        android:layout_width="348dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="158dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Info3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Info1" />
 
     <TextView
         android:id="@+id/Info3"
-        android:layout_width="348dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="214dp" />
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Info2" />
 
     <TextView
         android:id="@+id/Lydeffekter"
-        android:layout_width="348dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="41dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
         android:text="  Lydeffekter"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="420dp" />
+        app:layout_constraintBottom_toTopOf="@+id/logud"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Pop_switch" />
 
     <Switch
         android:id="@+id/Pop_switch"
-        android:layout_width="52dp"
-        android:layout_height="17dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
         android:checked="true"
         android:showText="true"
         android:splitTrack="true"
         android:textOff="Off"
         android:textOn="On"
-        tools:checked="true"
-        tools:layout_editor_absoluteX="297dp"
-        tools:layout_editor_absoluteY="370dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Lydswitch"
+        app:layout_constraintEnd_toEndOf="@+id/Lydswitch"
+        app:layout_constraintStart_toStartOf="@+id/Lydswitch"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        tools:checked="true" />
 
     <Switch
         android:id="@+id/Lydswitch"
         android:layout_width="52dp"
-        android:layout_height="17dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="49dp"
         android:checked="true"
         android:showText="true"
         android:splitTrack="true"
         android:textOff="Off"
         android:textOn="On"
-        tools:checked="false"
-        tools:layout_editor_absoluteX="297dp"
-        tools:layout_editor_absoluteY="427dp" />
+        app:layout_constraintBottom_toTopOf="@+id/logud"
+        app:layout_constraintEnd_toEndOf="@+id/Lydeffekter"
+        app:layout_constraintTop_toBottomOf="@+id/Pop_switch"
+        tools:checked="false" />
 
 </android.support.constraint.ConstraintLayout>
