--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
         android:text="Fornavn Efternavn"
         android:textColor="#ffffff"
         android:textSize="25dp"
@@ -76,14 +77,5 @@
         android:src="@drawable/walking_stickman"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="370dp" />
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/subsec_progbar"
-        android:background="@drawable/subsec_progbar"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="383dp" />
 
 </android.support.constraint.ConstraintLayout>
