--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -70,22 +70,23 @@
 
     <Button
         android:id="@+id/periode"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/patientinformation_textview"
-        android:text="Periode"
+        android:text="Angiv dato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:background="@drawable/patientinformation_textview"
+        android:text="Angiv datatype"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
