--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -70,32 +70,33 @@
 
     <Button
         android:id="@+id/periode"
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="40dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/patientinformation_textview"
-        android:text="Periode"
+        android:text="Angiv dato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Button
         android:id="@+id/grafer"
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="40dp"
         android:layout_marginEnd="28dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:background="@drawable/patientinformation_textview"
+        android:text="Valg af graf"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <fragment
         android:id="@+id/Kalenderfragment"
         android:name="e.android.sensmotion.Kalender_frag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="240dp"
-        android:layout_marginStart="60dp"
+        android:layout_width="335dp"
+        android:layout_height="236dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginStart="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
