--- a/app/src/main/res/layout/kalender.xml
+++ b/app/src/main/res/layout/kalender.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:background="@drawable/edittext_custom"
         android:layout_width="300dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/edittext_custom"
+        android:gravity="center"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="0dp">
 
 
         <CalendarView
             android:layout_width="wrap_content"
-            android:layout_height="320dp">
+            android:layout_height="320dp"
+            android:layout_gravity="center">
 
         </CalendarView>
 
