--- a/app/src/main/res/layout/fragment_patientliste_frag.xml
+++ b/app/src/main/res/layout/fragment_patientliste_frag.xml
@@ -39,8 +39,8 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="428dp"
+        android:layout_width="349dp"
+        android:layout_height="398dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -55,6 +55,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="78dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/edittext_custom"
+                android:text="Hans-Ole Nordschou"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="78dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/edittext_custom"
+                android:text="Johnny Kaspersen"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="78dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/edittext_custom"
+                android:text="Kenny Østergaard"
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/button1"
