--- a/app/src/main/res/layout/kalender.xml
+++ b/app/src/main/res/layout/kalender.xml
@@ -15,8 +15,8 @@
 
 
         <CalendarView
-            android:layout_width="wrap_content"
-            android:layout_height="320dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_gravity="center">
 
         </CalendarView>
