--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".PatientData_frag">
+    tools:context=".PatientData_frag"
+    tools:layout_editor_absoluteY="25dp">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -14,7 +15,7 @@
         android:id="@+id/textView3"
         android:layout_width="394dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="209dp"
         android:background="@color/colorRed"
         android:gravity="center_vertical"
         android:paddingBottom="5dp"
@@ -23,81 +24,93 @@
         android:text="Fornavn Efternavn"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/kalender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="230dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="2dp"
         android:background="@drawable/patientinformation_textview"
         android:gravity="center"
         android:padding="5dp"
         android:text="Patientinformation vises her"
         android:textSize="26sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_height="33dp"
-        android:layout_marginBottom="317dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="376dp"
+        android:layout_marginEnd="5dp"
+        android:background="@drawable/patientinformation_textview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="235dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="149dp"
+            tools:layout_editor_absoluteY="166dp" />
+    </RelativeLayout>
+
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="130dp"
-        android:layout_height="118dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="0dp"
+        android:layout_height="115dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="14dp"
         android:src="@drawable/patient_ikon"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
+        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/periode"
-        android:layout_width="155dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="332dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/patientinformation_textview"
         android:text="Angiv dato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/grafer"
-        android:layout_width="155dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="332dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/patientinformation_textview"
         android:text="Valg af graf"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <fragment
-        android:id="@+id/Kalenderfragment"
+        android:id="@+id/kalender"
         android:name="e.android.sensmotion.Kalender_frag"
-        android:layout_width="327dp"
-        android:layout_height="246dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginStart="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </android.support.constraint.ConstraintLayout>
