--- a/app/src/main/res/drawable/subsec_progbar.xml
+++ b/app/src/main/res/drawable/subsec_progbar.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="#04ff00" />
     <stroke
         android:width="0.5dp"
         android:color="#000000"
         />
     <size
-        android:width="200dp"
-        android:height="10dp"
+        android:width="500dp"
+        android:height="20dp"
         />
     <corners
         android:bottomLeftRadius="500dp"
