--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -78,5 +78,34 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="370dp" />
 
+    <ProgressBar
+        android:id="@+id/progbar_walk"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/laying_stickman"
+        tools:layout_editor_absoluteY="388dp" />
+
+    <ProgressBar
+        android:id="@+id/progbar_stand"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/walking_stickman"
+        app:layout_constraintTop_toBottomOf="@+id/progbar_sit" />
+
+    <ProgressBar
+        android:id="@+id/progbar_sit"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/sitting_stickman"
+        app:layout_constraintTop_toBottomOf="@+id/progbar_walk" />
+
 
 </android.support.constraint.ConstraintLayout>
