Patient data er lavet om til en activitet og har fået ændret navn. De steder hvor den bliver kaldt som en frag er blevet ændret.

--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".PatientData_frag"
+    tools:context=".PatientData"
     tools:layout_editor_absoluteY="25dp">
 
     <!-- TODO: Update blank fragment layout -->
