Lavet PatienData tilbage til en frag. Kalender virker næsten, udover at den blvier sat bagved, og den eneste måde at fjerne den er ved at klikke på "tilbage".

--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".PatientData"
+    tools:context=".PatientData_frag"
     tools:layout_editor_absoluteY="25dp">
 
     <!-- TODO: Update blank fragment layout -->
@@ -100,7 +100,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <fragment
+    <LinearLayout
         android:id="@+id/kalender"
         android:name="e.android.sensmotion.Kalender_frag"
         android:layout_width="0dp"
@@ -111,6 +111,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:orientation="horizontal" />
 
 </android.support.constraint.ConstraintLayout>
