--- a/app/src/main/res/layout/kalender.xml
+++ b/app/src/main/res/layout/kalender.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="280dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="97dp"
         android:background="@drawable/edittext_custom"
         android:gravity="center"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <CalendarView
