--- a/app/src/main/res/layout/patient_setting_frag.xml
+++ b/app/src/main/res/layout/patient_setting_frag.xml
@@ -181,5 +181,20 @@
         app:layout_constraintStart_toEndOf="@+id/popupText"
         app:layout_constraintTop_toTopOf="@+id/coloumn4" />
 
+    <Button
+        android:id="@+id/logUd"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Log ud"
+        android:textSize="18sp"
+        android:textColor="#ffffff"
+        android:background="@drawable/login_knap"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
