Patient skærm fungere med popup og progress bar animation

--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -110,6 +110,7 @@
     <ProgressBar
         android:id="@+id/progbar_other"
         style="?android:attr/progressBarStyleHorizontal"
+        android:progress="40"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
@@ -120,6 +121,7 @@
     <ProgressBar
         android:id="@+id/progbar_train"
         style="?android:attr/progressBarStyleHorizontal"
+        android:progress="90"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
@@ -140,6 +142,7 @@
     <ProgressBar
         android:id="@+id/progbar_bike"
         style="?android:attr/progressBarStyleHorizontal"
+        android:progress="70"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
@@ -150,6 +153,7 @@
     <ProgressBar
         android:id="@+id/progbar_stand"
         style="?android:attr/progressBarStyleHorizontal"
+        android:progress="80"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
@@ -161,7 +165,6 @@
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:progress="80"
-        android:progressDrawable="@drawable/circle_progress"
         android:layout_width="201dp"
         android:layout_height="170dp"
         android:layout_marginEnd="8dp"
@@ -170,7 +173,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:progressDrawable="@drawable/circle_progress"/>
 
     <TextView
         android:id="@+id/progressBarText"
