--- a/app/src/main/res/layout/fragment_instillinger.xml
+++ b/app/src/main/res/layout/fragment_instillinger.xml
@@ -18,7 +18,7 @@
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:text="Fornavn Efternavn"
+        android:text="Indstillinger"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/Indstillinger"
@@ -102,6 +102,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
+        android:text="     Fornavn Efternavn"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/Info2"
@@ -118,6 +119,7 @@
         android:layout_marginBottom="12dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
+        android:text="     CPR-nr."
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/Info3"
@@ -134,6 +136,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/edittext_custom"
         android:fontFamily="sans-serif"
+        android:text="     Something else"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
