Changed color of a button and altered size of scrollView

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     -->
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#2a2a2a</color>
-    <color name="colorRed">#E82020</color>
+    <color name="colorRed">#e82020</color>
     <color name="colorBackground">#F2F2F2</color>
     <color name="colorGray">#A6B9C5</color>
     <color name="colorBlue">#1A91DC</color>
