rettet id'er i terapeut_setting

--- a/app/src/main/res/layout/terapeut_setting_frag.xml
+++ b/app/src/main/res/layout/terapeut_setting_frag.xml
@@ -16,39 +16,39 @@
         android:layout_marginBottom="18dp"
         android:background="@color/colorRed"
         android:gravity="center_vertical"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:text="Indstillinger"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/Patient Indstillinger"
+        app:layout_constraintBottom_toTopOf="@+id/Patientindstillinger"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/Patient Indstillinger"
+        android:id="@+id/Patientindstillinger"
         android:layout_width="wrap_content"
-        android:layout_height="39dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="11dp"
-        android:text="Patient Indstillinger"
+        android:text="Patientindstillinger"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/Patient oplysninger"
+        app:layout_constraintBottom_toTopOf="@+id/Patientoplysninger"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Titel" />
 
     <TextView
-        android:id="@+id/Endheds indstillinger"
+        android:id="@+id/Endhedsindstillinger"
         android:layout_width="213dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="20dp"
-        android:text="Enheds indstillinger"
+        android:layout_marginStart="16dp"
+        android:text="Enhedsindstillinger"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/Rediger enhed,"
+        app:layout_constraintBottom_toTopOf="@+id/Rediger_enhed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Patient kontakt" />
+        app:layout_constraintTop_toBottomOf="@+id/Patientkontakt" />
 
     <Button
         android:id="@+id/logud"
@@ -60,63 +60,63 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Tilføj Endhed" />
+        app:layout_constraintTop_toBottomOf="@+id/Tilføj_enhed" />
 
     <Button
-        android:id="@+id/Patient oplysninger"
+        android:id="@+id/Patientoplysninger"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/edittext_custom"
         android:text="     Rediger oplysninger"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/Patient kontakt"
+        app:layout_constraintBottom_toTopOf="@+id/Patientkontakt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Patient Indstillinger" />
+        app:layout_constraintTop_toBottomOf="@+id/Patientindstillinger" />
 
     <Button
-        android:id="@+id/Patient kontakt"
+        android:id="@+id/Patientkontakt"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="39dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/edittext_custom"
         android:text="     Kontakt patient"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/Endheds indstillinger"
+        app:layout_constraintBottom_toTopOf="@+id/Endhedsindstillinger"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Patient oplysninger" />
+        app:layout_constraintTop_toBottomOf="@+id/Patientoplysninger" />
 
     <Button
-        android:id="@+id/Rediger enhed,"
+        android:id="@+id/Rediger_enhed"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/edittext_custom"
         android:text="     Rediger enheder"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/Tilføj Endhed"
+        app:layout_constraintBottom_toTopOf="@+id/Tilføj_enhed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Endheds indstillinger" />
+        app:layout_constraintTop_toBottomOf="@+id/Endhedsindstillinger" />
 
     <Button
-        android:id="@+id/Tilføj Endhed"
+        android:id="@+id/Tilføj_enhed"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="22dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/edittext_custom"
         android:text="     Tilføj Enhed"
         android:textAlignment="textStart"
@@ -124,6 +124,6 @@
         app:layout_constraintBottom_toTopOf="@+id/logud"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Rediger enhed," />
+        app:layout_constraintTop_toBottomOf="@+id/Rediger_enhed" />
 
 </android.support.constraint.ConstraintLayout>
